...
            options={{
              title: 'Login'
            }}
          />
          <Stack.Screen
            name="profile"
            options={{ title: 'Perfil' }}
          />
        </Stack>
      </ProtectedRoute>
    </NavigationThemeProvider>
  );
}
...
